@@ -1,5 +1,6 @@
 Version 0.6.8
 -------------
+Improved nzbs.org support (and all Newznab at the same time)
 Removed support for nzbx.co (read here to know why it shut down: http://www.dslreports.com/forum/r28443268-nzbx.co-shuts-down)
 Removed support for nzbsrus.com (read here to know why it shut down: http://sickbeard.com/forums/viewtopic.php?f=3&t=7596)
 Added support for nzb-rss.com (thanks brandon-barker)
